# nia-langchain

./: README.md
.github/scripts/: check_diff.py
.github/workflows/: _compile_integration_test.yml  _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml
libs/langchain-nia/: Makefile  README.md  pyproject.toml
libs/langchain-nia-js/: package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
libs/langchain-nia-js/src/: index.ts  toolkit.ts  tools.ts  utils.ts
libs/langchain-nia-js/src/tests/: tools.test.ts
libs/langchain-nia/langchain_nia/: __init__.py  _api_wrapper.py  advisor.py  context_save.py  context_search.py  deep_research.py  dependency_analyze.py  dependency_subscribe.py  github_glob.py  github_read.py  github_search.py  github_tree.py  search.py  source_explore.py  source_grep.py  source_index.py  source_list.py  source_read.py  source_subscribe.py  source_sync.py  toolkit.py  universal_search.py  web_search.py
libs/langchain-nia/tests/integration_tests/: test_compile.py  test_tools.py
libs/langchain-nia/tests/unit_tests/: test_tools.py
