[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-nia"
version = "0.1.0"
description = "An integration package connecting Nia AI and LangChain"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain-core>=0.3.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.urls]
"Source Code" = "https://github.com/nozomio-labs/nia-langchain/tree/main/libs/langchain-nia"
repository = "https://github.com/nozomio-labs/nia-langchain"

[dependency-groups]
lint = ["ruff>=0.5.0,<1.0.0"]
typing = ["mypy>=1.10,<2.0"]
test = [
    "pytest>=7.4.3,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-socket>=0.7.0,<1.0.0",
    "langchain-tests>=0.3.0,<1.0.0",
    "respx>=0.21.0,<1.0.0",
]
test_integration = []
dev = [
    { include-group = "lint" },
    { include-group = "typing" },
    { include-group = "test" },
]

[tool.hatch.build.targets.wheel]
packages = ["langchain_nia"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]
